--- a/index.html
+++ b/index.html
@@ -12,7 +12,96 @@
 
 <body>
 
-    <script src="src/js/imain.js"></script>
+    <div class="container">
+        <div class="header">
+            <div class="nav">
+                <div class="icon">?</div>
+                <h2>Mathler KW</h2>
+            </div>
+            <div class="information">
+                <p>Carilah formula yang tepat agar hasilnya sama dengan <span class="clue"></span></p>
+            </div>
+        </div>
+        <div class="box-content">
+            <div class="row" row="1">
+                <div class="box" col="1"></div>
+                <div class="box" col="2"></div>
+                <div class="box" col="3"></div>
+                <div class="box" col="4"></div>
+                <div class="box" col="5"></div>
+                <div class="box" col="6"></div>
+            </div>
+            <div class="row" row="2">
+                <div class="box" col="1"></div>
+                <div class="box" col="2"></div>
+                <div class="box" col="3"></div>
+                <div class="box" col="4"></div>
+                <div class="box" col="5"></div>
+                <div class="box" col="6"></div>
+            </div>
+            <div class="row" row="3">
+                <div class="box" col="1"></div>
+                <div class="box" col="2"></div>
+                <div class="box" col="3"></div>
+                <div class="box" col="4"></div>
+                <div class="box" col="5"></div>
+                <div class="box" col="6"></div>
+            </div>
+            <div class="row" row="4">
+                <div class="box" col="1"></div>
+                <div class="box" col="2"></div>
+                <div class="box" col="3"></div>
+                <div class="box" col="4"></div>
+                <div class="box" col="5"></div>
+                <div class="box" col="6"></div>
+            </div>
+            <div class="row" row="5">
+                <div class="box" col="1"></div>
+                <div class="box" col="2"></div>
+                <div class="box" col="3"></div>
+                <div class="box" col="4"></div>
+                <div class="box" col="5"></div>
+                <div class="box" col="6"></div>
+            </div>
+            <div class="row" row="6">
+                <div class="box" col="1"></div>
+                <div class="box" col="2"></div>
+                <div class="box" col="3"></div>
+                <div class="box" col="4"></div>
+                <div class="box" col="5"></div>
+                <div class="box" col="6"></div>
+            </div>
+        </div>
+        <div class="keyboard-content">
+            <div class="key">
+                <div class="number">
+                    <div class="num" key-value="1">1</div>
+                    <div class="num" key-value="2">2</div>
+                    <div class="num" key-value="3">3</div>
+                    <div class="num" key-value="4">4</div>
+                    <div class="num" key-value="5">5</div>
+                    <div class="num" key-value="6">6</div>
+                    <div class="num" key-value="7">7</div>
+                    <div class="num" key-value="8">8</div>
+                    <div class="num" key-value="9">9</div>
+                </div>
+                <div class="operator">
+                    <div class="op del">Delete</div>
+                    <div class="op" key-value="-">-</div>
+                    <div class="op" key-value="+">+</div>
+                    <div class="op" key-value="*">*</div>
+                    <div class="op" key-value="/">/</div>
+                    <div class="op en">Enter</div>
+                </div>
+            </div>
+        </div>
+    </div>
+
+
+    <script src="https://code.jquery.com/jquery-3.6.0.js"
+        integrity="sha256-H+K7U5CnXl1h5ywQfKtSj8PCmoN9aaq30gDh27Xc0jk=" crossorigin="anonymous"></script>
+
+    <script src="src/js/main.js"></script>
 </body>
 
 </html>
