Adjusment box click method

--- a/index.html
+++ b/index.html
@@ -17,6 +17,7 @@
             <div class="nav">
                 <div class="icon">?</div>
                 <h2>Mathler KW</h2>
+                <div class="setting"></div>
             </div>
             <div class="information">
                 <p>Carilah formula yang tepat agar hasilnya sama dengan <span class="clue"></span></p>
@@ -86,12 +87,12 @@
                     <div class="num" key-value="9">9</div>
                 </div>
                 <div class="operator">
-                    <div class="op del">Delete</div>
-                    <div class="op" key-value="-">-</div>
-                    <div class="op" key-value="+">+</div>
-                    <div class="op" key-value="*">*</div>
-                    <div class="op" key-value="/">/</div>
-                    <div class="op en">Enter</div>
+                    <div class="op del" key-value="del">Delete</div>
+                    <div class="op" key-value="sub">-</div>
+                    <div class="op" key-value="sum">+</div>
+                    <div class="op" key-value="multipli">*</div>
+                    <div class="op" key-value="divide">/</div>
+                    <div class="op en" key-value="en">Enter</div>
                 </div>
             </div>
         </div>
