--- a/index.html
+++ b/index.html
@@ -120,6 +120,7 @@
                     <div class="num" key-value="7">7</div>
                     <div class="num" key-value="8">8</div>
                     <div class="num" key-value="9">9</div>
+                    <div class="num" key-value="0">0</div>
                 </div>
                 <div class="operator">
                     <div class="op del" key-value="del">Delete</div>
